--- a/simple_warehouse/static/description/index.html
+++ b/simple_warehouse/static/description/index.html
@@ -13,23 +13,23 @@
         <h2 class="oe_slogan" style="color:#875A7B;">Simple warehouse does not interfere with a main Odoo inventory functionality</h2>
         <h3 class="oe_slogan">With this module you can:</h3>
         <div class="oe_span6 text-justify oe_mt32">
-            <span class="fa fa-male fa-2x pull-left"/>
+            <span class="fa fa-screwdriver fa-2x pull-left"/>
             <p class="oe_mb32" style="margin-left:48px;">
             Add tools (products).
             </p>
-            <span class="fa fa-music fa-2x pull-left"/>
+            <span class="fa fa-folder fa-2x pull-left"/>
             <p class="oe_mb32" style="margin-left:48px;">
             Add categories.
             </p>
-            <span class="fa fa-list-ul fa-2x pull-left"></span>
+            <span class="fa fa-warehouse fa-2x pull-left"></span>
             <p class="oe_mb32" style="margin-left:48px;">
             Add warehouses.
             </p>
-			<span class="fa fa-fast-forward fa-2x pull-left"/>
+			<span class="fa fa-exchange fa-2x pull-left"/>
             <p class="oe_mb32" style="margin-left:48px;">
             Transfer tools.
             </p>
-			<span class="fa fa-volume-up fa-2x pull-left"/>
+			<span class="fa fa-print fa-2x pull-left"/>
             <p class="oe_mb32" style="margin-left:48px;">
             Reserve tools.
             </p>
