--- a/simple_warehouse/static/description/index.html
+++ b/simple_warehouse/static/description/index.html
@@ -13,7 +13,7 @@
         <h2 class="oe_slogan" style="color:#875A7B;">Simple warehouse does not interfere with a main Odoo inventory functionality</h2>
         <h3 class="oe_slogan">With this module you can:</h3>
         <div class="oe_span6 text-justify oe_mt32">
-            <span class="fa fa-box fa-2x pull-left"/>
+            <span class="fa fa-wrench fa-2x pull-left"/>
             <p class="oe_mb32" style="margin-left:48px;">
             Add tools (products).
             </p>
