--- a/simple_warehouse/static/description/index.html
+++ b/simple_warehouse/static/description/index.html
@@ -21,7 +21,7 @@
             <p class="oe_mb32" style="margin-left:48px;">
             Add categories.
             </p>
-            <span class="fa fa-truck-moving fa-2x pull-left"></span>
+            <span class="fa fa-home fa-2x pull-left"></span>
             <p class="oe_mb32" style="margin-left:48px;">
             Add warehouses.
             </p>
